event listeners for mousedown + mouseup on all keys

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
 
+    <ul id="keyboard">
+      <li class="key"><button>SOUND</button></li>
+    </ul>
     <script src="js/app.js" charset="utf-8"></script>
   </body>
 </html>
