--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
   </head>
   <body>
 
-    <ul id="keyboard">
-      <li class="key"><button>SOUND</button></li>
-    </ul>
+    <div id="keyboard">
+      <button class="key" data-freq="200">SOUND</button>
+      <button class="key" data-freq="250">SOUND</button>
+      <button class="key" data-freq="300">SOUND</button>
+      <button class="key" data-freq="350">SOUND</button>
+      <button class="key" data-freq="400">SOUND</button>
+    </div>
     <script src="js/app.js" charset="utf-8"></script>
   </body>
 </html>
