use lowercase waveform names in waveform select tag

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <h3>WaveForm:</h3>
     <select id="waveform-select">
-      <option value="SINE">Sine</option>
-      <option value="TRIANGLE">Triangle</option>
-      <option value="SAWTOOTH">Sawtooth</option>
-      <option selected value="SQUARE">Square</option>
+      <option value="sine">Sine</option>
+      <option value="triangle">Triangle</option>
+      <option value="sawtooth">Sawtooth</option>
+      <option selected value="square">Square</option>
     </select>
 
     <div id="envelope">
