fadeIn and fadeOut functions calling eachother at attackTime

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <div id="envelope">
       <h3>Envelope:</h3>
+      Attack:
+      <input id="attack" type="range" value="20">
       Release:
       <input id="release" type="range" value="20">
     </div>
